Project01/force-app/main/default/objects/Sales__c/Sales__c.object-meta.xml
<CustomObject>
    <label>Sale</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sales Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>