Project01/force-app/main/default/objects/Sales__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <label>Sale Date</label>
    <type>DateTime</type>
</CustomField>