Project01/force-app/main/default/objects/Sales__c/recordTypes/Regular_Sale.recordType-meta.xml
<RecordType>
    <fullName>Regular_Sale</fullName>
    <active>true</active>
    <label>Regular Sale</label>
</RecordType>