Project01/force-app/main/default/objects/Sales__c/recordTypes/Special_Order_Sale.recordType-meta.xml
<RecordType>
    <fullName>Special_Order_Sale</fullName>
    <active>true</active>
    <label>Special Order Sale</label>
</RecordType>